kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderhub-api
  namespace: orderhub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orderhub-api
  template:
    metadata:
      labels:
        app: orderhub-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: orderhub-api
      containers:
        - name: orderhub-api
          image: orderhubdevacr.azurecr.io/orderhub-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
